parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    OPADI
    OPSUB
    OPDIV
    PVIRG
    DPONTOS
    APAR
    FPAR
    PONTO

Grammar

Rule 0     S' -> main
Rule 1     main -> select items where condition
Rule 2     select -> SELECT
Rule 3     select -> UPDATE
Rule 4     select -> DELETE
Rule 5     items -> OPMULT
Rule 6     items -> identifiers
Rule 7     identifiers -> ID
Rule 8     identifiers -> ID VIRG identifiers
Rule 9     where -> FROM ID WHERE
Rule 10    condition -> ID ATRIB ID
Rule 11    condition -> ID ATRIB CTE
Rule 12    condition -> ID ATRIB ASPASIMP ID ASPASIMP
Rule 13    condition -> ID MENORQ ID
Rule 14    condition -> ID MENORQ CTE
Rule 15    condition -> ID MENORQ ASPASIMP ID ASPASIMP
Rule 16    condition -> ID MAIORQ ID
Rule 17    condition -> ID MAIORQ CTE
Rule 18    condition -> ID MAIORQ ASPASIMP ID ASPASIMP
Rule 19    condition -> ID MENORIG ID
Rule 20    condition -> ID MENORIG CTE
Rule 21    condition -> ID MENORIG ASPASIMP ID ASPASIMP
Rule 22    condition -> ID MAIORIG ID
Rule 23    condition -> ID MAIORIG CTE
Rule 24    condition -> ID MAIORIG ASPASIMP ID ASPASIMP
Rule 25    condition -> ID EQ ID
Rule 26    condition -> ID EQ CTE
Rule 27    condition -> ID EQ ASPASIMP ID ASPASIMP
Rule 28    condition -> ID NE ID
Rule 29    condition -> ID NE CTE
Rule 30    condition -> ID NE ASPASIMP ID ASPASIMP
Rule 31    condition -> ID OR ID
Rule 32    condition -> ID OR ASPASIMP ID ASPASIMP
Rule 33    condition -> ID AND ID
Rule 34    condition -> ID AND ASPASIMP ID ASPASIMP
Rule 35    condition -> ID LIKE ID
Rule 36    condition -> ID LIKE CTE
Rule 37    condition -> ID LIKE ASPASIMP ID ASPASIMP
Rule 38    condition -> ID ATRIB ID AND condition
Rule 39    condition -> ID ATRIB CTE AND condition
Rule 40    condition -> ID ATRIB ASPASIMP ID ASPASIMP AND condition
Rule 41    condition -> ID ATRIB ID OR condition
Rule 42    condition -> ID ATRIB CTE OR condition
Rule 43    condition -> ID ATRIB ASPASIMP ID ASPASIMP OR condition
Rule 44    condition -> ID EQ ID AND condition
Rule 45    condition -> ID EQ CTE AND condition
Rule 46    condition -> ID EQ ASPASIMP ID ASPASIMP AND condition
Rule 47    condition -> ID EQ ID OR condition
Rule 48    condition -> ID EQ CTE OR condition
Rule 49    condition -> ID EQ ASPASIMP ID ASPASIMP OR condition
Rule 50    condition -> ID NE ID AND condition
Rule 51    condition -> ID NE CTE AND condition
Rule 52    condition -> ID NE ASPASIMP ID ASPASIMP AND condition
Rule 53    condition -> ID NE ID OR condition
Rule 54    condition -> ID NE CTE OR condition
Rule 55    condition -> ID NE ASPASIMP ID ASPASIMP OR condition
Rule 56    condition -> ID MAIORQ ID AND condition
Rule 57    condition -> ID MAIORQ CTE AND condition
Rule 58    condition -> ID MAIORQ ASPASIMP ID ASPASIMP AND condition
Rule 59    condition -> ID MAIORQ ID OR condition
Rule 60    condition -> ID MAIORQ CTE OR condition
Rule 61    condition -> ID MAIORQ ASPASIMP ID ASPASIMP OR condition
Rule 62    condition -> ID MENORQ ID AND condition
Rule 63    condition -> ID MENORQ CTE AND condition
Rule 64    condition -> ID MENORQ ASPASIMP ID ASPASIMP AND condition
Rule 65    condition -> ID MENORQ ID OR condition
Rule 66    condition -> ID MENORQ CTE OR condition
Rule 67    condition -> ID MENORQ ASPASIMP ID ASPASIMP OR condition
Rule 68    condition -> ID MAIORIG ID AND condition
Rule 69    condition -> ID MAIORIG CTE AND condition
Rule 70    condition -> ID MAIORIG ASPASIMP ID ASPASIMP AND condition
Rule 71    condition -> ID MAIORIG ID OR condition
Rule 72    condition -> ID MAIORIG CTE OR condition
Rule 73    condition -> ID MAIORIG ASPASIMP ID ASPASIMP OR condition
Rule 74    condition -> ID MENORIG ID AND condition
Rule 75    condition -> ID MENORIG CTE AND condition
Rule 76    condition -> ID MENORIG ASPASIMP ID ASPASIMP AND condition
Rule 77    condition -> ID MENORIG ID OR condition
Rule 78    condition -> ID MENORIG CTE OR condition
Rule 79    condition -> ID MENORIG ASPASIMP ID ASPASIMP OR condition

Terminals, with rules where they appear

AND                  : 33 34 38 39 40 44 45 46 50 51 52 56 57 58 62 63 64 68 69 70 74 75 76
APAR                 : 
ASPASIMP             : 12 12 15 15 18 18 21 21 24 24 27 27 30 30 32 32 34 34 37 37 40 40 43 43 46 46 49 49 52 52 55 55 58 58 61 61 64 64 67 67 70 70 73 73 76 76 79 79
ATRIB                : 10 11 12 38 39 40 41 42 43
CTE                  : 11 14 17 20 23 26 29 36 39 42 45 48 51 54 57 60 63 66 69 72 75 78
DELETE               : 4
DPONTOS              : 
EQ                   : 25 26 27 44 45 46 47 48 49
FPAR                 : 
FROM                 : 9
ID                   : 7 8 9 10 10 11 12 12 13 13 14 15 15 16 16 17 18 18 19 19 20 21 21 22 22 23 24 24 25 25 26 27 27 28 28 29 30 30 31 31 32 32 33 33 34 34 35 35 36 37 37 38 38 39 40 40 41 41 42 43 43 44 44 45 46 46 47 47 48 49 49 50 50 51 52 52 53 53 54 55 55 56 56 57 58 58 59 59 60 61 61 62 62 63 64 64 65 65 66 67 67 68 68 69 70 70 71 71 72 73 73 74 74 75 76 76 77 77 78 79 79
LIKE                 : 35 36 37
MAIORIG              : 22 23 24 68 69 70 71 72 73
MAIORQ               : 16 17 18 56 57 58 59 60 61
MENORIG              : 19 20 21 74 75 76 77 78 79
MENORQ               : 13 14 15 62 63 64 65 66 67
NE                   : 28 29 30 50 51 52 53 54 55
OPADI                : 
OPDIV                : 
OPMULT               : 5
OPSUB                : 
OR                   : 31 32 41 42 43 47 48 49 53 54 55 59 60 61 65 66 67 71 72 73 77 78 79
PONTO                : 
PVIRG                : 
SELECT               : 2
UPDATE               : 3
VIRG                 : 8
WHERE                : 9
error                : 

Nonterminals, with rules where they appear

condition            : 1 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
identifiers          : 6 8
items                : 1
main                 : 0
select               : 1
where                : 1

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . select items where condition
    (2) select -> . SELECT
    (3) select -> . UPDATE
    (4) select -> . DELETE

    SELECT          shift and go to state 3
    UPDATE          shift and go to state 4
    DELETE          shift and go to state 5

    main                           shift and go to state 1
    select                         shift and go to state 2

state 1

    (0) S' -> main .



state 2

    (1) main -> select . items where condition
    (5) items -> . OPMULT
    (6) items -> . identifiers
    (7) identifiers -> . ID
    (8) identifiers -> . ID VIRG identifiers

    OPMULT          shift and go to state 7
    ID              shift and go to state 9

    items                          shift and go to state 6
    identifiers                    shift and go to state 8

state 3

    (2) select -> SELECT .

    OPMULT          reduce using rule 2 (select -> SELECT .)
    ID              reduce using rule 2 (select -> SELECT .)


state 4

    (3) select -> UPDATE .

    OPMULT          reduce using rule 3 (select -> UPDATE .)
    ID              reduce using rule 3 (select -> UPDATE .)


state 5

    (4) select -> DELETE .

    OPMULT          reduce using rule 4 (select -> DELETE .)
    ID              reduce using rule 4 (select -> DELETE .)


state 6

    (1) main -> select items . where condition
    (9) where -> . FROM ID WHERE

    FROM            shift and go to state 11

    where                          shift and go to state 10

state 7

    (5) items -> OPMULT .

    FROM            reduce using rule 5 (items -> OPMULT .)


state 8

    (6) items -> identifiers .

    FROM            reduce using rule 6 (items -> identifiers .)


state 9

    (7) identifiers -> ID .
    (8) identifiers -> ID . VIRG identifiers

    FROM            reduce using rule 7 (identifiers -> ID .)
    VIRG            shift and go to state 12


state 10

    (1) main -> select items where . condition
    (10) condition -> . ID ATRIB ID
    (11) condition -> . ID ATRIB CTE
    (12) condition -> . ID ATRIB ASPASIMP ID ASPASIMP
    (13) condition -> . ID MENORQ ID
    (14) condition -> . ID MENORQ CTE
    (15) condition -> . ID MENORQ ASPASIMP ID ASPASIMP
    (16) condition -> . ID MAIORQ ID
    (17) condition -> . ID MAIORQ CTE
    (18) condition -> . ID MAIORQ ASPASIMP ID ASPASIMP
    (19) condition -> . ID MENORIG ID
    (20) condition -> . ID MENORIG CTE
    (21) condition -> . ID MENORIG ASPASIMP ID ASPASIMP
    (22) condition -> . ID MAIORIG ID
    (23) condition -> . ID MAIORIG CTE
    (24) condition -> . ID MAIORIG ASPASIMP ID ASPASIMP
    (25) condition -> . ID EQ ID
    (26) condition -> . ID EQ CTE
    (27) condition -> . ID EQ ASPASIMP ID ASPASIMP
    (28) condition -> . ID NE ID
    (29) condition -> . ID NE CTE
    (30) condition -> . ID NE ASPASIMP ID ASPASIMP
    (31) condition -> . ID OR ID
    (32) condition -> . ID OR ASPASIMP ID ASPASIMP
    (33) condition -> . ID AND ID
    (34) condition -> . ID AND ASPASIMP ID ASPASIMP
    (35) condition -> . ID LIKE ID
    (36) condition -> . ID LIKE CTE
    (37) condition -> . ID LIKE ASPASIMP ID ASPASIMP
    (38) condition -> . ID ATRIB ID AND condition
    (39) condition -> . ID ATRIB CTE AND condition
    (40) condition -> . ID ATRIB ASPASIMP ID ASPASIMP AND condition
    (41) condition -> . ID ATRIB ID OR condition
    (42) condition -> . ID ATRIB CTE OR condition
    (43) condition -> . ID ATRIB ASPASIMP ID ASPASIMP OR condition
    (44) condition -> . ID EQ ID AND condition
    (45) condition -> . ID EQ CTE AND condition
    (46) condition -> . ID EQ ASPASIMP ID ASPASIMP AND condition
    (47) condition -> . ID EQ ID OR condition
    (48) condition -> . ID EQ CTE OR condition
    (49) condition -> . ID EQ ASPASIMP ID ASPASIMP OR condition
    (50) condition -> . ID NE ID AND condition
    (51) condition -> . ID NE CTE AND condition
    (52) condition -> . ID NE ASPASIMP ID ASPASIMP AND condition
    (53) condition -> . ID NE ID OR condition
    (54) condition -> . ID NE CTE OR condition
    (55) condition -> . ID NE ASPASIMP ID ASPASIMP OR condition
    (56) condition -> . ID MAIORQ ID AND condition
    (57) condition -> . ID MAIORQ CTE AND condition
    (58) condition -> . ID MAIORQ ASPASIMP ID ASPASIMP AND condition
    (59) condition -> . ID MAIORQ ID OR condition
    (60) condition -> . ID MAIORQ CTE OR condition
    (61) condition -> . ID MAIORQ ASPASIMP ID ASPASIMP OR condition
    (62) condition -> . ID MENORQ ID AND condition
    (63) condition -> . ID MENORQ CTE AND condition
    (64) condition -> . ID MENORQ ASPASIMP ID ASPASIMP AND condition
    (65) condition -> . ID MENORQ ID OR condition
    (66) condition -> . ID MENORQ CTE OR condition
    (67) condition -> . ID MENORQ ASPASIMP ID ASPASIMP OR condition
    (68) condition -> . ID MAIORIG ID AND condition
    (69) condition -> . ID MAIORIG CTE AND condition
    (70) condition -> . ID MAIORIG ASPASIMP ID ASPASIMP AND condition
    (71) condition -> . ID MAIORIG ID OR condition
    (72) condition -> . ID MAIORIG CTE OR condition
    (73) condition -> . ID MAIORIG ASPASIMP ID ASPASIMP OR condition
    (74) condition -> . ID MENORIG ID AND condition
    (75) condition -> . ID MENORIG CTE AND condition
    (76) condition -> . ID MENORIG ASPASIMP ID ASPASIMP AND condition
    (77) condition -> . ID MENORIG ID OR condition
    (78) condition -> . ID MENORIG CTE OR condition
    (79) condition -> . ID MENORIG ASPASIMP ID ASPASIMP OR condition

    ID              shift and go to state 14

    condition                      shift and go to state 13

state 11

    (9) where -> FROM . ID WHERE

    ID              shift and go to state 15


state 12

    (8) identifiers -> ID VIRG . identifiers
    (7) identifiers -> . ID
    (8) identifiers -> . ID VIRG identifiers

    ID              shift and go to state 9

    identifiers                    shift and go to state 16

state 13

    (1) main -> select items where condition .

    $end            reduce using rule 1 (main -> select items where condition .)


state 14

    (10) condition -> ID . ATRIB ID
    (11) condition -> ID . ATRIB CTE
    (12) condition -> ID . ATRIB ASPASIMP ID ASPASIMP
    (13) condition -> ID . MENORQ ID
    (14) condition -> ID . MENORQ CTE
    (15) condition -> ID . MENORQ ASPASIMP ID ASPASIMP
    (16) condition -> ID . MAIORQ ID
    (17) condition -> ID . MAIORQ CTE
    (18) condition -> ID . MAIORQ ASPASIMP ID ASPASIMP
    (19) condition -> ID . MENORIG ID
    (20) condition -> ID . MENORIG CTE
    (21) condition -> ID . MENORIG ASPASIMP ID ASPASIMP
    (22) condition -> ID . MAIORIG ID
    (23) condition -> ID . MAIORIG CTE
    (24) condition -> ID . MAIORIG ASPASIMP ID ASPASIMP
    (25) condition -> ID . EQ ID
    (26) condition -> ID . EQ CTE
    (27) condition -> ID . EQ ASPASIMP ID ASPASIMP
    (28) condition -> ID . NE ID
    (29) condition -> ID . NE CTE
    (30) condition -> ID . NE ASPASIMP ID ASPASIMP
    (31) condition -> ID . OR ID
    (32) condition -> ID . OR ASPASIMP ID ASPASIMP
    (33) condition -> ID . AND ID
    (34) condition -> ID . AND ASPASIMP ID ASPASIMP
    (35) condition -> ID . LIKE ID
    (36) condition -> ID . LIKE CTE
    (37) condition -> ID . LIKE ASPASIMP ID ASPASIMP
    (38) condition -> ID . ATRIB ID AND condition
    (39) condition -> ID . ATRIB CTE AND condition
    (40) condition -> ID . ATRIB ASPASIMP ID ASPASIMP AND condition
    (41) condition -> ID . ATRIB ID OR condition
    (42) condition -> ID . ATRIB CTE OR condition
    (43) condition -> ID . ATRIB ASPASIMP ID ASPASIMP OR condition
    (44) condition -> ID . EQ ID AND condition
    (45) condition -> ID . EQ CTE AND condition
    (46) condition -> ID . EQ ASPASIMP ID ASPASIMP AND condition
    (47) condition -> ID . EQ ID OR condition
    (48) condition -> ID . EQ CTE OR condition
    (49) condition -> ID . EQ ASPASIMP ID ASPASIMP OR condition
    (50) condition -> ID . NE ID AND condition
    (51) condition -> ID . NE CTE AND condition
    (52) condition -> ID . NE ASPASIMP ID ASPASIMP AND condition
    (53) condition -> ID . NE ID OR condition
    (54) condition -> ID . NE CTE OR condition
    (55) condition -> ID . NE ASPASIMP ID ASPASIMP OR condition
    (56) condition -> ID . MAIORQ ID AND condition
    (57) condition -> ID . MAIORQ CTE AND condition
    (58) condition -> ID . MAIORQ ASPASIMP ID ASPASIMP AND condition
    (59) condition -> ID . MAIORQ ID OR condition
    (60) condition -> ID . MAIORQ CTE OR condition
    (61) condition -> ID . MAIORQ ASPASIMP ID ASPASIMP OR condition
    (62) condition -> ID . MENORQ ID AND condition
    (63) condition -> ID . MENORQ CTE AND condition
    (64) condition -> ID . MENORQ ASPASIMP ID ASPASIMP AND condition
    (65) condition -> ID . MENORQ ID OR condition
    (66) condition -> ID . MENORQ CTE OR condition
    (67) condition -> ID . MENORQ ASPASIMP ID ASPASIMP OR condition
    (68) condition -> ID . MAIORIG ID AND condition
    (69) condition -> ID . MAIORIG CTE AND condition
    (70) condition -> ID . MAIORIG ASPASIMP ID ASPASIMP AND condition
    (71) condition -> ID . MAIORIG ID OR condition
    (72) condition -> ID . MAIORIG CTE OR condition
    (73) condition -> ID . MAIORIG ASPASIMP ID ASPASIMP OR condition
    (74) condition -> ID . MENORIG ID AND condition
    (75) condition -> ID . MENORIG CTE AND condition
    (76) condition -> ID . MENORIG ASPASIMP ID ASPASIMP AND condition
    (77) condition -> ID . MENORIG ID OR condition
    (78) condition -> ID . MENORIG CTE OR condition
    (79) condition -> ID . MENORIG ASPASIMP ID ASPASIMP OR condition

    ATRIB           shift and go to state 17
    MENORQ          shift and go to state 18
    MAIORQ          shift and go to state 19
    MENORIG         shift and go to state 20
    MAIORIG         shift and go to state 21
    EQ              shift and go to state 22
    NE              shift and go to state 23
    OR              shift and go to state 24
    AND             shift and go to state 25
    LIKE            shift and go to state 26


state 15

    (9) where -> FROM ID . WHERE

    WHERE           shift and go to state 27


state 16

    (8) identifiers -> ID VIRG identifiers .

    FROM            reduce using rule 8 (identifiers -> ID VIRG identifiers .)


state 17

    (10) condition -> ID ATRIB . ID
    (11) condition -> ID ATRIB . CTE
    (12) condition -> ID ATRIB . ASPASIMP ID ASPASIMP
    (38) condition -> ID ATRIB . ID AND condition
    (39) condition -> ID ATRIB . CTE AND condition
    (40) condition -> ID ATRIB . ASPASIMP ID ASPASIMP AND condition
    (41) condition -> ID ATRIB . ID OR condition
    (42) condition -> ID ATRIB . CTE OR condition
    (43) condition -> ID ATRIB . ASPASIMP ID ASPASIMP OR condition

    ID              shift and go to state 28
    CTE             shift and go to state 29
    ASPASIMP        shift and go to state 30


state 18

    (13) condition -> ID MENORQ . ID
    (14) condition -> ID MENORQ . CTE
    (15) condition -> ID MENORQ . ASPASIMP ID ASPASIMP
    (62) condition -> ID MENORQ . ID AND condition
    (63) condition -> ID MENORQ . CTE AND condition
    (64) condition -> ID MENORQ . ASPASIMP ID ASPASIMP AND condition
    (65) condition -> ID MENORQ . ID OR condition
    (66) condition -> ID MENORQ . CTE OR condition
    (67) condition -> ID MENORQ . ASPASIMP ID ASPASIMP OR condition

    ID              shift and go to state 31
    CTE             shift and go to state 32
    ASPASIMP        shift and go to state 33


state 19

    (16) condition -> ID MAIORQ . ID
    (17) condition -> ID MAIORQ . CTE
    (18) condition -> ID MAIORQ . ASPASIMP ID ASPASIMP
    (56) condition -> ID MAIORQ . ID AND condition
    (57) condition -> ID MAIORQ . CTE AND condition
    (58) condition -> ID MAIORQ . ASPASIMP ID ASPASIMP AND condition
    (59) condition -> ID MAIORQ . ID OR condition
    (60) condition -> ID MAIORQ . CTE OR condition
    (61) condition -> ID MAIORQ . ASPASIMP ID ASPASIMP OR condition

    ID              shift and go to state 34
    CTE             shift and go to state 35
    ASPASIMP        shift and go to state 36


state 20

    (19) condition -> ID MENORIG . ID
    (20) condition -> ID MENORIG . CTE
    (21) condition -> ID MENORIG . ASPASIMP ID ASPASIMP
    (74) condition -> ID MENORIG . ID AND condition
    (75) condition -> ID MENORIG . CTE AND condition
    (76) condition -> ID MENORIG . ASPASIMP ID ASPASIMP AND condition
    (77) condition -> ID MENORIG . ID OR condition
    (78) condition -> ID MENORIG . CTE OR condition
    (79) condition -> ID MENORIG . ASPASIMP ID ASPASIMP OR condition

    ID              shift and go to state 37
    CTE             shift and go to state 38
    ASPASIMP        shift and go to state 39


state 21

    (22) condition -> ID MAIORIG . ID
    (23) condition -> ID MAIORIG . CTE
    (24) condition -> ID MAIORIG . ASPASIMP ID ASPASIMP
    (68) condition -> ID MAIORIG . ID AND condition
    (69) condition -> ID MAIORIG . CTE AND condition
    (70) condition -> ID MAIORIG . ASPASIMP ID ASPASIMP AND condition
    (71) condition -> ID MAIORIG . ID OR condition
    (72) condition -> ID MAIORIG . CTE OR condition
    (73) condition -> ID MAIORIG . ASPASIMP ID ASPASIMP OR condition

    ID              shift and go to state 40
    CTE             shift and go to state 41
    ASPASIMP        shift and go to state 42


state 22

    (25) condition -> ID EQ . ID
    (26) condition -> ID EQ . CTE
    (27) condition -> ID EQ . ASPASIMP ID ASPASIMP
    (44) condition -> ID EQ . ID AND condition
    (45) condition -> ID EQ . CTE AND condition
    (46) condition -> ID EQ . ASPASIMP ID ASPASIMP AND condition
    (47) condition -> ID EQ . ID OR condition
    (48) condition -> ID EQ . CTE OR condition
    (49) condition -> ID EQ . ASPASIMP ID ASPASIMP OR condition

    ID              shift and go to state 43
    CTE             shift and go to state 44
    ASPASIMP        shift and go to state 45


state 23

    (28) condition -> ID NE . ID
    (29) condition -> ID NE . CTE
    (30) condition -> ID NE . ASPASIMP ID ASPASIMP
    (50) condition -> ID NE . ID AND condition
    (51) condition -> ID NE . CTE AND condition
    (52) condition -> ID NE . ASPASIMP ID ASPASIMP AND condition
    (53) condition -> ID NE . ID OR condition
    (54) condition -> ID NE . CTE OR condition
    (55) condition -> ID NE . ASPASIMP ID ASPASIMP OR condition

    ID              shift and go to state 46
    CTE             shift and go to state 47
    ASPASIMP        shift and go to state 48


state 24

    (31) condition -> ID OR . ID
    (32) condition -> ID OR . ASPASIMP ID ASPASIMP

    ID              shift and go to state 49
    ASPASIMP        shift and go to state 50


state 25

    (33) condition -> ID AND . ID
    (34) condition -> ID AND . ASPASIMP ID ASPASIMP

    ID              shift and go to state 51
    ASPASIMP        shift and go to state 52


state 26

    (35) condition -> ID LIKE . ID
    (36) condition -> ID LIKE . CTE
    (37) condition -> ID LIKE . ASPASIMP ID ASPASIMP

    ID              shift and go to state 53
    CTE             shift and go to state 54
    ASPASIMP        shift and go to state 55


state 27

    (9) where -> FROM ID WHERE .

    ID              reduce using rule 9 (where -> FROM ID WHERE .)


state 28

    (10) condition -> ID ATRIB ID .
    (38) condition -> ID ATRIB ID . AND condition
    (41) condition -> ID ATRIB ID . OR condition

    $end            reduce using rule 10 (condition -> ID ATRIB ID .)
    AND             shift and go to state 56
    OR              shift and go to state 57


state 29

    (11) condition -> ID ATRIB CTE .
    (39) condition -> ID ATRIB CTE . AND condition
    (42) condition -> ID ATRIB CTE . OR condition

    $end            reduce using rule 11 (condition -> ID ATRIB CTE .)
    AND             shift and go to state 58
    OR              shift and go to state 59


state 30

    (12) condition -> ID ATRIB ASPASIMP . ID ASPASIMP
    (40) condition -> ID ATRIB ASPASIMP . ID ASPASIMP AND condition
    (43) condition -> ID ATRIB ASPASIMP . ID ASPASIMP OR condition

    ID              shift and go to state 60


state 31

    (13) condition -> ID MENORQ ID .
    (62) condition -> ID MENORQ ID . AND condition
    (65) condition -> ID MENORQ ID . OR condition

    $end            reduce using rule 13 (condition -> ID MENORQ ID .)
    AND             shift and go to state 61
    OR              shift and go to state 62


state 32

    (14) condition -> ID MENORQ CTE .
    (63) condition -> ID MENORQ CTE . AND condition
    (66) condition -> ID MENORQ CTE . OR condition

    $end            reduce using rule 14 (condition -> ID MENORQ CTE .)
    AND             shift and go to state 63
    OR              shift and go to state 64


state 33

    (15) condition -> ID MENORQ ASPASIMP . ID ASPASIMP
    (64) condition -> ID MENORQ ASPASIMP . ID ASPASIMP AND condition
    (67) condition -> ID MENORQ ASPASIMP . ID ASPASIMP OR condition

    ID              shift and go to state 65


state 34

    (16) condition -> ID MAIORQ ID .
    (56) condition -> ID MAIORQ ID . AND condition
    (59) condition -> ID MAIORQ ID . OR condition

    $end            reduce using rule 16 (condition -> ID MAIORQ ID .)
    AND             shift and go to state 66
    OR              shift and go to state 67


state 35

    (17) condition -> ID MAIORQ CTE .
    (57) condition -> ID MAIORQ CTE . AND condition
    (60) condition -> ID MAIORQ CTE . OR condition

    $end            reduce using rule 17 (condition -> ID MAIORQ CTE .)
    AND             shift and go to state 68
    OR              shift and go to state 69


state 36

    (18) condition -> ID MAIORQ ASPASIMP . ID ASPASIMP
    (58) condition -> ID MAIORQ ASPASIMP . ID ASPASIMP AND condition
    (61) condition -> ID MAIORQ ASPASIMP . ID ASPASIMP OR condition

    ID              shift and go to state 70


state 37

    (19) condition -> ID MENORIG ID .
    (74) condition -> ID MENORIG ID . AND condition
    (77) condition -> ID MENORIG ID . OR condition

    $end            reduce using rule 19 (condition -> ID MENORIG ID .)
    AND             shift and go to state 71
    OR              shift and go to state 72


state 38

    (20) condition -> ID MENORIG CTE .
    (75) condition -> ID MENORIG CTE . AND condition
    (78) condition -> ID MENORIG CTE . OR condition

    $end            reduce using rule 20 (condition -> ID MENORIG CTE .)
    AND             shift and go to state 73
    OR              shift and go to state 74


state 39

    (21) condition -> ID MENORIG ASPASIMP . ID ASPASIMP
    (76) condition -> ID MENORIG ASPASIMP . ID ASPASIMP AND condition
    (79) condition -> ID MENORIG ASPASIMP . ID ASPASIMP OR condition

    ID              shift and go to state 75


state 40

    (22) condition -> ID MAIORIG ID .
    (68) condition -> ID MAIORIG ID . AND condition
    (71) condition -> ID MAIORIG ID . OR condition

    $end            reduce using rule 22 (condition -> ID MAIORIG ID .)
    AND             shift and go to state 76
    OR              shift and go to state 77


state 41

    (23) condition -> ID MAIORIG CTE .
    (69) condition -> ID MAIORIG CTE . AND condition
    (72) condition -> ID MAIORIG CTE . OR condition

    $end            reduce using rule 23 (condition -> ID MAIORIG CTE .)
    AND             shift and go to state 78
    OR              shift and go to state 79


state 42

    (24) condition -> ID MAIORIG ASPASIMP . ID ASPASIMP
    (70) condition -> ID MAIORIG ASPASIMP . ID ASPASIMP AND condition
    (73) condition -> ID MAIORIG ASPASIMP . ID ASPASIMP OR condition

    ID              shift and go to state 80


state 43

    (25) condition -> ID EQ ID .
    (44) condition -> ID EQ ID . AND condition
    (47) condition -> ID EQ ID . OR condition

    $end            reduce using rule 25 (condition -> ID EQ ID .)
    AND             shift and go to state 81
    OR              shift and go to state 82


state 44

    (26) condition -> ID EQ CTE .
    (45) condition -> ID EQ CTE . AND condition
    (48) condition -> ID EQ CTE . OR condition

    $end            reduce using rule 26 (condition -> ID EQ CTE .)
    AND             shift and go to state 83
    OR              shift and go to state 84


state 45

    (27) condition -> ID EQ ASPASIMP . ID ASPASIMP
    (46) condition -> ID EQ ASPASIMP . ID ASPASIMP AND condition
    (49) condition -> ID EQ ASPASIMP . ID ASPASIMP OR condition

    ID              shift and go to state 85


state 46

    (28) condition -> ID NE ID .
    (50) condition -> ID NE ID . AND condition
    (53) condition -> ID NE ID . OR condition

    $end            reduce using rule 28 (condition -> ID NE ID .)
    AND             shift and go to state 86
    OR              shift and go to state 87


state 47
